@@ -4,6 +4,7 @@ procps-ng-NEXT
   * library: dont use vm_min_free on non Linux             Debian #831396
   * library: dont use SIGPWR on FreeBSD                    Debian #832148
   * pmap: fix duplicate output line under '-x' option      Redhat #1374061
+  * top: eliminated minor libnuma memory leak
 
 procps-ng-3.3.12
 ----------------
